# mevacoin_for_android

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.android  Dockerfile.test  LICENSE  README.md  SECURITY.md  compilazione_manuale.txt  docker-compose.yml  install.sh  installazione_ambiente_android.sh  nodes.json  rocksdb.sh  start.sh
src/: CMakeLists.txt
src/binary_info/: daemon.rc  service.rc
src/blockchain_explorer/: blockchain_explorer.cpp  blockchain_explorer.h  blockchain_explorer_errors.cpp  blockchain_explorer_errors.h
src/common/: array_ref.h  array_view.h  base58.cpp  base58.h  blocking_queue.cpp  blocking_queue.h  console_handler.cpp  console_handler.h  console_tools.cpp  console_tools.h  file_mapped_vector.cpp  file_mapped_vector.h  iinput_stream.cpp  iinput_stream.h  int_util.h  ioutput_stream.cpp  ioutput_stream.h  json_value.cpp  json_value.h  math.cpp  math.h  memory_input_stream.cpp  memory_input_stream.h  observer_manager.h  path_tools.cpp  path_tools.h  pod_class.h  scope_exit.cpp  scope_exit.h  signal_handler.cpp  signal_handler.h  std_input_stream.cpp  std_input_stream.h  std_output_stream.cpp  std_output_stream.h  stream_tools.cpp  stream_tools.h  string_buffer.h  string_input_stream.cpp  string_input_stream.h  (+11 more)
src/config/: ascii.h  cli_header.h  mevacoin_checkpoints.h  mevacoin_config.h  version.h.in  wallet_config.h
src/crypto/: crypto-ops-data.c  crypto-ops.c  crypto.h  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash-ops.h  hash.c  hash.h  initializer.h  slow-hash.c  tree-hash.c  variant2_int_sqrt.h
src/crypto_test/: main.cpp
src/daemon/: daemon.cpp  daemon_commands_handler.cpp  daemon_commands_handler.h  daemon_configuration.cpp  daemon_configuration.h
src/errors/: errors.cpp  errors.h  validate_parameters.cpp  validate_parameters.h
src/http/: http_parser.cpp  http_parser.h  http_parser_error_codes.cpp  http_parser_error_codes.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h
src/json_rpc_server/: json_rpc_server.cpp  json_rpc_server.h
src/logging/: common_logger.cpp  common_logger.h  console_logger.cpp  console_logger.h  dummy_logger.h  file_logger.cpp  file_logger.h  ilogger.cpp  ilogger.h  logger_group.cpp  logger_group.h  logger_manager.cpp  logger_manager.h  logger_message.cpp  logger_message.h  logger_ref.cpp  logger_ref.h  stream_logger.cpp  stream_logger.h
src/mevacoin_core/: account.cpp  account.h  add_block_error_condition.cpp  add_block_error_condition.h  add_block_errors.cpp  add_block_errors.h  block_validation_errors.cpp  block_validation_errors.h  blockchain_cache.cpp  blockchain_cache.h  blockchain_messages.cpp  blockchain_messages.h  blockchain_read_batch.cpp  blockchain_read_batch.h  blockchain_storage.cpp  blockchain_storage.h  blockchain_utils.cpp  blockchain_utils.h  blockchain_write_batch.cpp  blockchain_write_batch.h  cached_block.cpp  cached_block.h  cached_transaction.cpp  cached_transaction.h  check_difficulty.cpp  check_difficulty.h  checkpoints.cpp  checkpoints.h  core.cpp  core.h  core_errors.cpp  core_errors.h  core_statistics.h  currency.cpp  currency.h  database_blockchain_cache.cpp  database_blockchain_cache.h  database_blockchain_cache_factory.cpp  database_blockchain_cache_factory.h  database_cache_data.cpp  (+75 more)
src/mevacoin_protocol/: imevacoin_protocol_observer.h  imevacoin_protocol_query.h  mevacoin_protocol_definitions.h  mevacoin_protocol_handler.cpp  mevacoin_protocol_handler.h  mevacoin_protocol_handler_common.h
src/miner/: blockchain_monitor.cpp  blockchain_monitor.h  main.cpp  miner.cpp  miner.h  miner_event.h  miner_manager.cpp  miner_manager.h  mining_config.cpp  mining_config.h
src/mnemonics/: crc32.h  mnemonics.h
src/nigel/: nigel.cpp  nigel.h
src/node_rpc_proxy/: node_errors.cpp  node_errors.h  node_rpc_proxy.cpp  node_rpc_proxy.h
src/p2p/: connection_context.h  ip2p_node_internal.cpp  ip2p_node_internal.h  levin_protocol.cpp  levin_protocol.h  net_node.cpp  net_node.h  net_node_common.h  net_node_config.cpp  net_node_config.h  p2p_connection_proxy.cpp  p2p_connection_proxy.h  p2p_context.cpp  p2p_context.h  p2p_context_owner.cpp  p2p_context_owner.h  p2p_interfaces.cpp  p2p_interfaces.h  p2p_node.cpp  p2p_node.h  p2p_node_config.cpp  p2p_node_config.h  p2p_protocol_definitions.h  p2p_protocol_types.h  peer_list_manager.cpp  peer_list_manager.h  peerlist.cpp  peerlist.h  pending_lite_block.h
src/rpc/: core_rpc_server_commands_definitions.h  core_rpc_server_error_codes.h  http_client.cpp  http_client.h  http_server.cpp  http_server.h  json_rpc.cpp  json_rpc.h  rpc_server.cpp  rpc_server.h
src/serialization/: binary_input_stream_serializer.cpp  binary_input_stream_serializer.h  binary_output_stream_serializer.cpp  binary_output_stream_serializer.h  binary_serialization_tools.h  blockchain_explorer_data_serialization.cpp  blockchain_explorer_data_serialization.h  iserializer.h  istream.h  json_input_stream_serializer.cpp  json_input_stream_serializer.h  json_input_value_serializer.cpp  json_input_value_serializer.h  json_output_stream_serializer.cpp  json_output_stream_serializer.h  kv_binary_common.h  kv_binary_input_stream_serializer.cpp  kv_binary_input_stream_serializer.h  kv_binary_output_stream_serializer.cpp  kv_binary_output_stream_serializer.h  memory_stream.cpp  memory_stream.h  serialization_overloads.cpp  serialization_overloads.h  serialization_tools.h
src/sub_wallets/: sub_wallet.cpp  sub_wallet.h  sub_wallets.cpp  sub_wallets.h
src/syst/: context.h  context_group.cpp  context_group.h  context_group_timeout.cpp  context_group_timeout.h  event.cpp  event.h  event_lock.cpp  event_lock.h  interrupted_exception.cpp  interrupted_exception.h  ipv4_address.cpp  ipv4_address.h  operation_timeout.h  remote_context.h  remote_event_lock.cpp  remote_event_lock.h  tcp_stream.cpp  tcp_stream.h
src/transfers/: blockchain_synchronizer.cpp  blockchain_synchronizer.h  common_types.h  iblockchain_synchronizer.h  iobservable_impl.h  synchronization_state.cpp  synchronization_state.h  transfers_consumer.cpp  (+8 more)
(+210 files in other folders)
